# docs/swagger.json
@@ -113,6 +113,17 @@
                     "user"
                 ],
                 "summary": "登录",
+                "parameters": [
+                    {
+                        "description": "登录请求体",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/go-dianping_api_v1.LoginReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -259,6 +270,27 @@
                 "y": {
                     "description": "维度",
                     "type": "number"
+                }
+            }
+        },
+        "go-dianping_api_v1.LoginReq": {
+            "type": "object",
+            "required": [
+                "code",
+                "phone"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "password": {
+                    "type": "string",
+                    "example": ""
+                },
+                "phone": {
+                    "type": "string",
+                    "example": "13456789001"
                 }
             }
         },
